added a delay to the timestamp saving to file to prevent incorrect values from being saved

--- a/D3D12Demo/data1.tex
+++ b/D3D12Demo/data1.tex
@@ -2,92 +2,182 @@
 
 
 % CPU frame: 1
-\addplot[geomStyleZero] coordinates{ (32.411036,0.9) (38.546096,0.9) }; 
-\addplot[fxaaStyleZero] coordinates{ (38.744918,0.9) (39.147842,0.9) }; 
-\addplot[presStyleZero] coordinates{ (60.070268,0.9) (60.098127,0.9) }; 
+\addplot[geomStyleZero] coordinates{ (22.955814,0.9) (27.191793,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (27.423167,0.9) (27.842219,0.9) }; 
+\addplot[presStyleZero] coordinates{ (33.333304,0.9) (33.355004,0.9) }; 
 % GPU frame: 1
-\addplot[geomStyleZero] coordinates{ (38.786080,1.75) (59.881984,1.75) }; 
-\addplot[fxaaStyleZero] coordinates{ (60.040064,2) (60.140736,2) }; 
-\addplot[presStyleZero] coordinates{ (60.228480,1.75) (60.252416,1.75) }; 
+\addplot[geomStyleZero] coordinates{ (27.457536,1.75) (33.208096,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (33.395840,2) (33.491904,2) }; 
+\addplot[presStyleZero] coordinates{ (33.584512,1.75) (33.608352,1.75) }; 
 
 % CPU frame: 2
-\addplot[geomStyleOne] coordinates{ (60.569085,1.0) (61.317456,1.0) }; 
-\addplot[fxaaStyleOne] coordinates{ (61.411589,1.0) (61.872869,1.0) }; 
-\addplot[presStyleOne] coordinates{ (83.489415,1.0) (83.529883,1.0) }; 
+\addplot[geomStyleOne] coordinates{ (33.900154,1.0) (34.385188,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (34.469937,1.0) (34.827993,1.0) }; 
+\addplot[presStyleOne] coordinates{ (39.752521,1.0) (39.766597,1.0) }; 
 % GPU frame: 2
-\addplot[geomStyleOne] coordinates{ (61.462112,1.75) (83.275488,1.75) }; 
-\addplot[fxaaStyleOne] coordinates{ (83.524672,2) (83.626464,2) }; 
-\addplot[presStyleOne] coordinates{ (83.828512,1.75) (83.852768,1.75) }; 
+\addplot[geomStyleOne] coordinates{ (34.461760,1.75) (39.657888,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (39.767488,2) (39.862720,2) }; 
+\addplot[presStyleOne] coordinates{ (39.936160,1.75) (39.960384,1.75) }; 
 
 % CPU frame: 3
-\addplot[geomStyleTwo] coordinates{ (84.162128,1.1) (84.814900,1.1) }; 
-\addplot[fxaaStyleTwo] coordinates{ (84.910792,1.1) (85.348906,1.1) }; 
-\addplot[presStyleTwo] coordinates{ (105.768117,1.1) (105.921486,1.1) }; 
+\addplot[geomStyleTwo] coordinates{ (40.141076,1.1) (40.614087,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (40.697662,1.1) (41.082405,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (46.675540,1.1) (46.691962,1.1) }; 
 % GPU frame: 3
-\addplot[geomStyleTwo] coordinates{ (84.964672,1.75) (105.547424,1.75) }; 
-\addplot[fxaaStyleTwo] coordinates{ (105.720928,2) (105.821984,2) }; 
-\addplot[presStyleTwo] coordinates{ (105.998016,1.75) (106.021920,1.75) }; 
+\addplot[geomStyleTwo] coordinates{ (40.752992,1.75) (46.568064,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (46.661312,2) (46.756672,2) }; 
+\addplot[presStyleTwo] coordinates{ (46.831616,1.75) (46.855712,1.75) }; 
 
 % CPU frame: 4
-\addplot[geomStyleZero] coordinates{ (106.387752,0.9) (107.037885,0.9) }; 
-\addplot[fxaaStyleZero] coordinates{ (107.142574,0.9) (107.531716,0.9) }; 
-\addplot[presStyleZero] coordinates{ (127.827762,0.9) (127.868817,0.9) }; 
+\addplot[geomStyleZero] coordinates{ (47.051485,0.9) (47.479042,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (47.554407,0.9) (47.885192,0.9) }; 
+\addplot[presStyleZero] coordinates{ (52.854587,0.9) (52.871009,0.9) }; 
 % GPU frame: 4
-\addplot[geomStyleZero] coordinates{ (107.120736,1.75) (127.621920,1.75) }; 
-\addplot[fxaaStyleZero] coordinates{ (127.835136,2) (127.936512,2) }; 
-\addplot[presStyleZero] coordinates{ (128.037952,1.75) (128.063904,1.75) }; 
+\addplot[geomStyleZero] coordinates{ (47.547584,1.75) (52.738016,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (52.848608,2) (52.942784,2) }; 
+\addplot[presStyleZero] coordinates{ (53.018624,1.75) (53.043520,1.75) }; 
 
 % CPU frame: 5
-\addplot[geomStyleOne] coordinates{ (128.357663,1.0) (129.055302,1.0) }; 
-\addplot[fxaaStyleOne] coordinates{ (129.152954,1.0) (129.500747,1.0) }; 
-\addplot[presStyleOne] coordinates{ (150.514960,1.0) (150.543405,1.0) }; 
+\addplot[geomStyleOne] coordinates{ (53.239916,1.0) (53.695038,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (53.772749,1.0) (54.100895,1.0) }; 
+\addplot[presStyleOne] coordinates{ (59.179965,1.0) (59.194920,1.0) }; 
 % GPU frame: 5
-\addplot[geomStyleOne] coordinates{ (129.213728,1.75) (150.341696,1.75) }; 
-\addplot[fxaaStyleOne] coordinates{ (150.477024,2) (150.578080,2) }; 
-\addplot[presStyleOne] coordinates{ (150.660096,1.75) (150.684576,1.75) }; 
+\addplot[geomStyleOne] coordinates{ (53.761472,1.75) (59.056672,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (59.426464,2) (59.521952,2) }; 
+\addplot[presStyleOne] coordinates{ (59.700960,1.75) (59.724576,1.75) }; 
 
 % CPU frame: 6
-\addplot[geomStyleTwo] coordinates{ (150.926388,1.1) (151.500276,1.1) }; 
-\addplot[fxaaStyleTwo] coordinates{ (151.577987,1.1) (151.929299,1.1) }; 
-\addplot[presStyleTwo] coordinates{ (172.276957,1.1) (172.318305,1.1) }; 
+\addplot[geomStyleTwo] coordinates{ (61.887531,1.1) (62.338548,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (62.415379,1.1) (62.808919,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (67.828460,1.1) (67.856025,1.1) }; 
 % GPU frame: 6
-\addplot[geomStyleTwo] coordinates{ (151.568768,1.75) (172.063040,1.75) }; 
-\addplot[fxaaStyleTwo] coordinates{ (172.229120,2) (172.329408,2) }; 
-\addplot[presStyleTwo] coordinates{ (172.437888,1.75) (172.461888,1.75) }; 
+\addplot[geomStyleTwo] coordinates{ (62.473856,1.75) (67.674208,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (67.807776,2) (67.901696,2) }; 
+\addplot[presStyleTwo] coordinates{ (68.020128,1.75) (68.045184,1.75) }; 
 
 % CPU frame: 7
-\addplot[geomStyleZero] coordinates{ (172.753193,0.9) (173.350541,0.9) }; 
-\addplot[fxaaStyleZero] coordinates{ (173.445554,0.9) (176.261329,0.9) }; 
-\addplot[presStyleZero] coordinates{ (192.836048,0.9) (192.864786,0.9) }; 
+\addplot[geomStyleZero] coordinates{ (68.351616,0.9) (68.987086,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (69.090603,0.9) (69.511122,0.9) }; 
+\addplot[presStyleZero] coordinates{ (74.439169,0.9) (74.476998,0.9) }; 
 % GPU frame: 7
-\addplot[geomStyleZero] coordinates{ (173.429664,1.75) (192.667264,1.75) }; 
-\addplot[fxaaStyleZero] coordinates{ (192.802880,2) (192.895616,2) }; 
-\addplot[presStyleZero] coordinates{ (192.978912,1.75) (193.002656,1.75) }; 
+\addplot[geomStyleZero] coordinates{ (69.070880,1.75) (74.262816,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (74.403584,2) (74.498368,2) }; 
+\addplot[presStyleZero] coordinates{ (74.603776,1.75) (74.628992,1.75) }; 
 
 % CPU frame: 8
-\addplot[geomStyleOne] coordinates{ (193.241318,1.0) (193.789400,1.0) }; 
-\addplot[fxaaStyleOne] coordinates{ (193.884706,1.0) (194.311676,1.0) }; 
-\addplot[presStyleOne] coordinates{ (213.584870,1.0) (213.623286,1.0) }; 
+\addplot[geomStyleOne] coordinates{ (74.890186,1.0) (75.540318,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (75.667295,1.0) (76.156727,1.0) }; 
+\addplot[presStyleOne] coordinates{ (81.690040,1.0) (81.722591,1.0) }; 
 % GPU frame: 8
-\addplot[geomStyleOne] coordinates{ (193.867136,1.75) (213.388224,1.75) }; 
-\addplot[fxaaStyleOne] coordinates{ (213.607488,2) (213.701024,2) }; 
-\addplot[presStyleOne] coordinates{ (213.808928,1.75) (213.832672,1.75) }; 
+\addplot[geomStyleOne] coordinates{ (75.725728,1.75) (81.501696,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (81.719072,2) (81.814784,2) }; 
+\addplot[presStyleOne] coordinates{ (82.001536,1.75) (82.026336,1.75) }; 
 
 % CPU frame: 9
-\addplot[geomStyleTwo] coordinates{ (214.182218,1.1) (214.792763,1.1) }; 
-\addplot[fxaaStyleTwo] coordinates{ (214.896279,1.1) (215.259908,1.1) }; 
-\addplot[presStyleTwo] coordinates{ (234.252463,1.1) (234.293225,1.1) }; 
+\addplot[geomStyleTwo] coordinates{ (82.279177,1.1) (82.841042,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (82.944852,1.1) (83.295871,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (88.403093,1.1) (88.440629,1.1) }; 
 % GPU frame: 9
-\addplot[geomStyleTwo] coordinates{ (214.879488,1.75) (234.047488,1.75) }; 
-\addplot[fxaaStyleTwo] coordinates{ (234.196416,2) (234.290112,2) }; 
-\addplot[presStyleTwo] coordinates{ (234.386304,1.75) (234.410528,1.75) }; 
+\addplot[geomStyleTwo] coordinates{ (82.992192,1.75) (88.187104,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (88.364288,2) (88.459168,2) }; 
+\addplot[presStyleTwo] coordinates{ (88.558784,1.75) (88.582432,1.75) }; 
 
 % CPU frame: 10
-\addplot[geomStyleZero] coordinates{ (234.657440,0.9) (235.269157,0.9) }; 
-\addplot[fxaaStyleZero] coordinates{ (235.363583,0.9) (235.390855,0.9) }; 
-\addplot[presStyleZero] coordinates{ (254.686630,0.9) (254.713609,0.9) }; 
+\addplot[geomStyleZero] coordinates{ (88.825958,0.9) (89.420080,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (89.550282,0.9) (89.581660,0.9) }; 
+\addplot[presStyleZero] coordinates{ (95.470390,0.9) (95.524641,0.9) }; 
 % GPU frame: 10
-\addplot[geomStyleZero] coordinates{ (235.349344,1.75) (254.533024,1.75) }; 
-\addplot[fxaaStyleZero] coordinates{ (254.653632,2) (254.654496,2) }; 
-\addplot[presStyleZero] coordinates{ (254.819616,1.75) (254.843616,1.75) }; 
+\addplot[geomStyleZero] coordinates{ (89.520640,1.75) (95.248512,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (95.411808,2) (95.412736,2) }; 
+\addplot[presStyleZero] coordinates{ (95.621376,1.75) (95.645984,1.75) }; 
+
+% CPU frame: 11
+\addplot[geomStyleOne] coordinates{ (95.918474,1.0) (95.973605,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (96.083867,1.0) (96.109966,1.0) }; 
+\addplot[presStyleOne] coordinates{ (101.443283,1.0) (101.478179,1.0) }; 
+% GPU frame: 11
+\addplot[geomStyleOne] coordinates{ (96.062368,1.75) (101.261120,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (101.406272,2) (101.500672,2) }; 
+\addplot[presStyleOne] coordinates{ (101.614912,1.75) (101.638848,1.75) }; 
+
+% CPU frame: 12
+\addplot[geomStyleTwo] coordinates{ (101.887262,1.1) (101.937994,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (102.035939,1.1) (102.060278,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (107.397114,1.1) (107.434650,1.1) }; 
+% GPU frame: 12
+\addplot[geomStyleTwo] coordinates{ (102.020512,1.75) (107.215584,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (107.424160,2) (107.518016,2) }; 
+\addplot[presStyleTwo] coordinates{ (107.644000,1.75) (107.670400,1.75) }; 
+
+% CPU frame: 13
+\addplot[geomStyleZero] coordinates{ (107.988597,0.9) (108.042262,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (108.150177,0.9) (108.180089,0.9) }; 
+\addplot[presStyleZero] coordinates{ (114.303711,0.9) (114.333916,0.9) }; 
+% GPU frame: 13
+\addplot[geomStyleZero] coordinates{ (108.128832,1.75) (114.081600,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (114.293600,2) (114.388960,2) }; 
+\addplot[presStyleZero] coordinates{ (114.478080,1.75) (114.501984,1.75) }; 
+
+% CPU frame: 14
+\addplot[geomStyleOne] coordinates{ (114.771443,1.0) (114.805753,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (114.892262,1.0) (114.911030,1.0) }; 
+\addplot[presStyleOne] coordinates{ (120.170155,1.0) (120.186870,1.0) }; 
+% GPU frame: 14
+\addplot[geomStyleOne] coordinates{ (114.874240,1.75) (120.072480,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (120.183904,2) (120.278048,2) }; 
+\addplot[presStyleOne] coordinates{ (120.351712,1.75) (120.375744,1.75) }; 
+
+% CPU frame: 15
+\addplot[geomStyleTwo] coordinates{ (120.558416,1.1) (120.603283,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (120.681581,1.1) (120.697416,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (126.346269,1.1) (126.375300,1.1) }; 
+% GPU frame: 15
+\addplot[geomStyleTwo] coordinates{ (120.671360,1.75) (126.157216,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (126.377056,2) (126.472672,2) }; 
+\addplot[presStyleTwo] coordinates{ (126.842048,1.75) (126.865120,1.75) }; 
+
+% CPU frame: 16
+\addplot[geomStyleZero] coordinates{ (127.060330,0.9) (127.105490,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (127.268243,0.9) (127.290237,0.9) }; 
+\addplot[presStyleZero] coordinates{ (132.630005,0.9) (132.648187,0.9) }; 
+% GPU frame: 16
+\addplot[geomStyleZero] coordinates{ (127.317472,1.75) (132.515680,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (132.614912,2) (132.708960,2) }; 
+\addplot[presStyleZero] coordinates{ (132.795712,1.75) (132.819808,1.75) }; 
+
+% CPU frame: 17
+\addplot[geomStyleOne] coordinates{ (133.062547,1.0) (133.092165,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (133.171343,1.0) (133.187765,1.0) }; 
+\addplot[presStyleOne] coordinates{ (138.500847,1.0) (138.521961,1.0) }; 
+% GPU frame: 17
+\addplot[geomStyleOne] coordinates{ (133.159616,1.75) (138.365888,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (138.480928,2) (138.575232,2) }; 
+\addplot[presStyleOne] coordinates{ (138.669024,1.75) (138.692544,1.75) }; 
+
+% CPU frame: 18
+\addplot[geomStyleTwo] coordinates{ (138.882951,1.1) (138.922539,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (139.002010,1.1) (139.022244,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (144.878717,1.1) (144.905696,1.1) }; 
+% GPU frame: 18
+\addplot[geomStyleTwo] coordinates{ (138.994080,1.75) (144.722208,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (144.939872,2) (145.034976,2) }; 
+\addplot[presStyleTwo] coordinates{ (145.218848,1.75) (145.243296,1.75) }; 
+
+% CPU frame: 19
+\addplot[geomStyleZero] coordinates{ (145.351727,0.9) (145.383105,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (145.495419,0.9) (145.512427,0.9) }; 
+\addplot[presStyleZero] coordinates{ (150.716715,0.9) (150.734896,0.9) }; 
+% GPU frame: 19
+\addplot[geomStyleZero] coordinates{ (145.565152,1.75) (150.606592,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (150.700256,2) (150.785920,2) }; 
+\addplot[presStyleZero] coordinates{ (150.859040,1.75) (150.882176,1.75) }; 
+
+% CPU frame: 20
+\addplot[geomStyleOne] coordinates{ (151.040462,1.0) (151.066267,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (151.145738,1.0) (151.159814,1.0) }; 
+\addplot[presStyleOne] coordinates{ (156.026572,1.0) (156.039768,1.0) }; 
+% GPU frame: 20
+\addplot[geomStyleOne] coordinates{ (151.131328,1.75) (155.941568,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (156.019296,2) (156.105248,2) }; 
+\addplot[presStyleOne] coordinates{ (156.174304,1.75) (156.197920,1.75) }; 
 
