--- a/D3D12Demo/data2.tex
+++ b/D3D12Demo/data2.tex
@@ -2,92 +2,182 @@
 
 
 % CPU frame: 1
-\addplot[geomStyleZero] coordinates{ (6.472882,0.9) (19.123931,0.9) }; 
-\addplot[fxaaStyleZero] coordinates{ (19.674359,0.9) (20.099276,0.9) }; 
-\addplot[presStyleZero] coordinates{ (48.565529,0.9) (48.585177,0.9) }; 
+\addplot[geomStyleZero] coordinates{ (4.902534,0.9) (19.932418,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (20.119804,0.9) (20.585483,0.9) }; 
+\addplot[presStyleZero] coordinates{ (28.693227,0.9) (28.736628,0.9) }; 
 % GPU frame: 1
-\addplot[geomStyleZero] coordinates{ (25.682080,1.75) (47.736000,1.75) }; 
-\addplot[fxaaStyleZero] coordinates{ (47.914432,2) (48.016320,2) }; 
-\addplot[presStyleZero] coordinates{ (70.532160,1.75) (70.553920,1.75) }; 
+\addplot[geomStyleZero] coordinates{ (20.099264,1.75) (25.902176,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (26.068000,2) (26.378112,2) }; 
+\addplot[presStyleZero] coordinates{ (31.846592,1.75) (31.868672,1.75) }; 
 
 % CPU frame: 2
-\addplot[geomStyleOne] coordinates{ (47.943842,1.0) (48.502774,1.0) }; 
-\addplot[fxaaStyleOne] coordinates{ (48.602772,1.0) (48.976664,1.0) }; 
-\addplot[presStyleOne] coordinates{ (70.712856,1.0) (70.738662,1.0) }; 
+\addplot[geomStyleOne] coordinates{ (20.171709,1.0) (21.051455,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (21.166116,1.0) (21.609801,1.0) }; 
+\addplot[presStyleOne] coordinates{ (31.959433,1.0) (31.983773,1.0) }; 
 % GPU frame: 2
-\addplot[geomStyleOne] coordinates{ (48.585728,1.75) (70.508480,1.75) }; 
-\addplot[fxaaStyleOne] coordinates{ (70.741760,2) (70.842624,2) }; 
-\addplot[presStyleOne] coordinates{ (70.993504,1.75) (71.017600,1.75) }; 
+\addplot[geomStyleOne] coordinates{ (25.928064,1.75) (31.822784,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (32.060000,2) (32.155424,2) }; 
+\addplot[presStyleOne] coordinates{ (32.340448,1.75) (32.364736,1.75) }; 
 
 % CPU frame: 3
-\addplot[geomStyleTwo] coordinates{ (70.704645,1.1) (71.316069,1.1) }; 
-\addplot[fxaaStyleTwo] coordinates{ (71.415773,1.1) (71.779109,1.1) }; 
-\addplot[presStyleTwo] coordinates{ (92.414151,1.1) (92.442889,1.1) }; 
+\addplot[geomStyleTwo] coordinates{ (32.189927,1.1) (32.889032,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (32.999294,1.1) (33.515705,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (38.386275,1.1) (38.414134,1.1) }; 
 % GPU frame: 3
-\addplot[geomStyleTwo] coordinates{ (71.399424,1.75) (92.236736,1.75) }; 
-\addplot[fxaaStyleTwo] coordinates{ (92.379008,2) (92.549216,2) }; 
-\addplot[presStyleTwo] coordinates{ (112.901728,1.75) (112.924512,1.75) }; 
+\addplot[geomStyleTwo] coordinates{ (33.056800,1.75) (38.227744,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (38.468128,2) (38.642368,2) }; 
+\addplot[presStyleTwo] coordinates{ (44.218304,1.75) (44.240800,1.75) }; 
 
 % CPU frame: 4
-\addplot[geomStyleZero] coordinates{ (71.443339,0.9) (72.154760,0.9) }; 
-\addplot[fxaaStyleZero] coordinates{ (72.232178,0.9) (72.674984,0.9) }; 
-\addplot[presStyleZero] coordinates{ (113.082037,0.9) (113.122505,0.9) }; 
+\addplot[geomStyleZero] coordinates{ (33.047680,0.9) (34.000152,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (34.101030,0.9) (34.599846,0.9) }; 
+\addplot[presStyleZero] coordinates{ (44.399929,0.9) (44.431307,0.9) }; 
 % GPU frame: 4
-\addplot[geomStyleZero] coordinates{ (92.262080,1.75) (112.881024,1.75) }; 
-\addplot[fxaaStyleZero] coordinates{ (113.020256,2) (113.114176,2) }; 
-\addplot[presStyleZero] coordinates{ (113.210144,1.75) (113.233824,1.75) }; 
+\addplot[geomStyleZero] coordinates{ (38.253504,1.75) (44.194528,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (44.432320,2) (44.528704,2) }; 
+\addplot[presStyleZero] coordinates{ (44.711616,1.75) (44.735712,1.75) }; 
 
 % CPU frame: 5
-\addplot[geomStyleOne] coordinates{ (113.101391,1.0) (113.788180,1.0) }; 
-\addplot[fxaaStyleOne] coordinates{ (113.887591,1.0) (114.304005,1.0) }; 
-\addplot[presStyleOne] coordinates{ (133.725876,1.0) (133.759013,1.0) }; 
+\addplot[geomStyleOne] coordinates{ (44.578225,1.0) (45.351522,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (45.484657,1.0) (46.009865,1.0) }; 
+\addplot[presStyleOne] coordinates{ (50.916212,1.0) (50.956387,1.0) }; 
 % GPU frame: 5
-\addplot[geomStyleOne] coordinates{ (113.869792,1.75) (133.533056,1.75) }; 
-\addplot[fxaaStyleOne] coordinates{ (133.693792,2) (133.864448,2) }; 
-\addplot[presStyleOne] coordinates{ (153.775584,1.75) (153.797152,1.75) }; 
+\addplot[geomStyleOne] coordinates{ (45.535936,1.75) (50.707296,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (50.872640,2) (51.041792,2) }; 
+\addplot[presStyleOne] coordinates{ (56.062016,1.75) (56.086560,1.75) }; 
 
 % CPU frame: 6
-\addplot[geomStyleTwo] coordinates{ (113.949760,1.1) (114.715726,1.1) }; 
-\addplot[fxaaStyleTwo] coordinates{ (114.813964,1.1) (115.206625,1.1) }; 
-\addplot[presStyleTwo] coordinates{ (153.965912,1.1) (153.996703,1.1) }; 
+\addplot[geomStyleTwo] coordinates{ (45.517207,1.1) (46.454137,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (46.554429,1.1) (47.003099,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (56.247769,1.1) (56.293516,1.1) }; 
 % GPU frame: 6
-\addplot[geomStyleTwo] coordinates{ (133.558048,1.75) (153.754656,1.75) }; 
-\addplot[fxaaStyleTwo] coordinates{ (153.969248,2) (154.063904,2) }; 
-\addplot[presStyleTwo] coordinates{ (154.840416,1.75) (154.864320,1.75) }; 
+\addplot[geomStyleTwo] coordinates{ (50.733056,1.75) (56.038464,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (56.461120,2) (56.557408,2) }; 
+\addplot[presStyleTwo] coordinates{ (56.738752,1.75) (56.762400,1.75) }; 
 
 % CPU frame: 7
-\addplot[geomStyleZero] coordinates{ (153.948024,0.9) (154.594051,0.9) }; 
-\addplot[fxaaStyleZero] coordinates{ (156.781981,0.9) (157.233877,0.9) }; 
-\addplot[presStyleZero] coordinates{ (174.735556,0.9) (174.773678,0.9) }; 
+\addplot[geomStyleZero] coordinates{ (56.606706,0.9) (57.363288,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (57.454489,0.9) (57.905212,0.9) }; 
+\addplot[presStyleZero] coordinates{ (62.727983,0.9) (62.747630,0.9) }; 
 % GPU frame: 7
-\addplot[geomStyleZero] coordinates{ (155.051072,1.75) (174.535264,1.75) }; 
-\addplot[fxaaStyleZero] coordinates{ (174.685312,2) (174.856128,2) }; 
-\addplot[presStyleZero] coordinates{ (193.709376,1.75) (193.732928,1.75) }; 
+\addplot[geomStyleZero] coordinates{ (57.441280,1.75) (62.610144,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (62.721664,2) (62.895648,2) }; 
+\addplot[presStyleZero] coordinates{ (67.868032,1.75) (67.891776,1.75) }; 
 
 % CPU frame: 8
-\addplot[geomStyleOne] coordinates{ (156.824209,1.0) (157.640614,1.0) }; 
-\addplot[fxaaStyleOne] coordinates{ (157.736506,1.0) (158.134151,1.0) }; 
-\addplot[presStyleOne] coordinates{ (193.882653,1.0) (193.918723,1.0) }; 
+\addplot[geomStyleOne] coordinates{ (57.492318,1.0) (58.276172,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (58.368838,1.0) (58.742144,1.0) }; 
+\addplot[presStyleOne] coordinates{ (68.012914,1.0) (68.033441,1.0) }; 
 % GPU frame: 8
-\addplot[geomStyleOne] coordinates{ (174.560672,1.75) (193.688864,1.75) }; 
-\addplot[fxaaStyleOne] coordinates{ (193.835904,2) (193.930720,2) }; 
-\addplot[presStyleOne] coordinates{ (194.040544,1.75) (194.064128,1.75) }; 
+\addplot[geomStyleOne] coordinates{ (62.635840,1.75) (67.847840,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (67.984064,2) (68.078080,2) }; 
+\addplot[presStyleOne] coordinates{ (68.160736,1.75) (68.184768,1.75) }; 
 
 % CPU frame: 9
-\addplot[geomStyleTwo] coordinates{ (193.882653,1.1) (194.567096,1.1) }; 
-\addplot[fxaaStyleTwo] coordinates{ (194.663575,1.1) (195.033948,1.1) }; 
-\addplot[presStyleTwo] coordinates{ (214.054948,1.1) (214.135592,1.1) }; 
+\addplot[geomStyleTwo] coordinates{ (67.999131,1.1) (68.497654,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (68.606449,1.1) (68.974183,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (74.240639,1.1) (74.330667,1.1) }; 
 % GPU frame: 9
-\addplot[geomStyleTwo] coordinates{ (194.648896,1.75) (213.895200,1.75) }; 
-\addplot[fxaaStyleTwo] coordinates{ (214.032832,2) (214.203776,2) }; 
-\addplot[presStyleTwo] coordinates{ (232.980576,1.75) (233.004576,1.75) }; 
+\addplot[geomStyleTwo] coordinates{ (68.592320,1.75) (74.109376,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (74.219328,2) (74.528512,2) }; 
+\addplot[presStyleTwo] coordinates{ (79.635680,1.75) (79.659936,1.75) }; 
 
 % CPU frame: 10
-\addplot[geomStyleZero] coordinates{ (194.679703,0.9) (195.356228,0.9) }; 
-\addplot[fxaaStyleZero] coordinates{ (195.439804,0.9) (195.456813,0.9) }; 
-\addplot[presStyleZero] coordinates{ (233.223746,0.9) (233.259816,0.9) }; 
+\addplot[geomStyleZero] coordinates{ (68.626683,0.9) (69.280922,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (69.359805,0.9) (69.374761,0.9) }; 
+\addplot[presStyleZero] coordinates{ (79.808262,0.9) (79.832895,0.9) }; 
 % GPU frame: 10
-\addplot[geomStyleZero] coordinates{ (213.920288,1.75) (232.960448,1.75) }; 
-\addplot[fxaaStyleZero] coordinates{ (233.161120,2) (233.253984,2) }; 
-\addplot[presStyleZero] coordinates{ (233.354464,1.75) (233.377824,1.75) }; 
+\addplot[geomStyleZero] coordinates{ (74.135232,1.75) (79.614048,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (79.785024,2) (79.879232,2) }; 
+\addplot[presStyleZero] coordinates{ (85.134784,1.75) (85.158016,1.75) }; 
+
+% CPU frame: 11
+\addplot[geomStyleOne] coordinates{ (79.793306,1.0) (79.836707,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (79.933186,1.0) (79.954300,1.0) }; 
+\addplot[presStyleOne] coordinates{ (85.277060,1.0) (85.310784,1.0) }; 
+% GPU frame: 11
+\addplot[geomStyleOne] coordinates{ (79.938336,1.75) (85.114176,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (85.341856,2) (85.435808,2) }; 
+\addplot[presStyleOne] coordinates{ (85.621344,1.75) (85.645440,1.75) }; 
+
+% CPU frame: 12
+\addplot[geomStyleTwo] coordinates{ (85.441279,1.1) (85.484094,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (85.610484,1.1) (85.632771,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (91.683961,1.1) (91.717391,1.1) }; 
+% GPU frame: 12
+\addplot[geomStyleTwo] coordinates{ (85.668096,1.75) (91.507136,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (91.663552,2) (91.758048,2) }; 
+\addplot[presStyleTwo] coordinates{ (97.030880,1.75) (97.054080,1.75) }; 
+
+% CPU frame: 13
+\addplot[geomStyleZero] coordinates{ (91.680735,0.9) (91.732934,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (91.852872,0.9) (91.882784,0.9) }; 
+\addplot[presStyleZero] coordinates{ (97.221672,0.9) (97.253050,0.9) }; 
+% GPU frame: 13
+\addplot[geomStyleZero] coordinates{ (91.825696,1.75) (97.010336,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (97.176320,2) (97.270880,2) }; 
+\addplot[presStyleZero] coordinates{ (102.556672,1.75) (102.579936,1.75) }; 
+
+% CPU frame: 14
+\addplot[geomStyleOne] coordinates{ (97.228417,1.0) (97.280029,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (97.382373,1.0) (97.408179,1.0) }; 
+\addplot[presStyleOne] coordinates{ (102.713050,1.0) (102.741789,1.0) }; 
+% GPU frame: 14
+\addplot[geomStyleOne] coordinates{ (97.358240,1.75) (102.536992,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (102.692128,2) (102.786176,2) }; 
+\addplot[presStyleOne] coordinates{ (108.637536,1.75) (108.660608,1.75) }; 
+
+% CPU frame: 15
+\addplot[geomStyleTwo] coordinates{ (102.738856,1.1) (102.780791,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (102.874631,1.1) (102.894571,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (108.787994,1.1) (108.827582,1.1) }; 
+% GPU frame: 15
+\addplot[geomStyleTwo] coordinates{ (102.853504,1.75) (108.616000,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (108.836608,2) (108.932672,2) }; 
+\addplot[presStyleTwo] coordinates{ (109.134272,1.75) (109.158368,1.75) }; 
+
+% CPU frame: 16
+\addplot[geomStyleZero] coordinates{ (108.965996,0.9) (109.017021,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (109.130802,0.9) (109.160420,0.9) }; 
+\addplot[presStyleZero] coordinates{ (114.872907,0.9) (114.889623,0.9) }; 
+% GPU frame: 16
+\addplot[geomStyleZero] coordinates{ (109.181440,1.75) (114.763488,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (114.862016,2) (114.959840,2) }; 
+\addplot[presStyleZero] coordinates{ (120.170496,1.75) (120.193856,1.75) }; 
+
+% CPU frame: 17
+\addplot[geomStyleOne] coordinates{ (114.857365,1.0) (114.888156,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (114.963521,1.0) (114.976718,1.0) }; 
+\addplot[presStyleOne] coordinates{ (120.284229,1.0) (120.305342,1.0) }; 
+% GPU frame: 17
+\addplot[geomStyleOne] coordinates{ (114.967712,1.75) (120.150560,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (120.265376,2) (120.359296,2) }; 
+\addplot[presStyleOne] coordinates{ (126.210176,1.75) (126.233408,1.75) }; 
+
+% CPU frame: 18
+\addplot[geomStyleTwo] coordinates{ (120.284815,1.1) (120.339066,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (120.439064,1.1) (120.462524,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (126.386737,1.1) (126.423980,1.1) }; 
+% GPU frame: 18
+\addplot[geomStyleTwo] coordinates{ (120.413440,1.75) (126.186784,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (126.336160,2) (126.337056,2) }; 
+\addplot[presStyleTwo] coordinates{ (132.112256,1.75) (132.134560,1.75) }; 
+
+% CPU frame: 19
+\addplot[geomStyleZero] coordinates{ (126.387324,0.9) (126.427792,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (126.533068,0.9) (126.557408,0.9) }; 
+\addplot[presStyleZero] coordinates{ (132.226202,0.9) (132.257286,0.9) }; 
+% GPU frame: 19
+\addplot[geomStyleZero] coordinates{ (126.506624,1.75) (132.092160,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (132.190112,2) (132.283904,2) }; 
+\addplot[presStyleZero] coordinates{ (137.557248,1.75) (137.580608,1.75) }; 
+
+% CPU frame: 20
+\addplot[geomStyleOne] coordinates{ (132.235879,1.0) (132.277813,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (132.378984,1.0) (132.406843,1.0) }; 
+\addplot[presStyleOne] coordinates{ (137.752183,1.0) (137.791185,1.0) }; 
+% GPU frame: 20
+\addplot[geomStyleOne] coordinates{ (132.356384,1.75) (137.537856,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (137.697184,2) (137.791200,2) }; 
+\addplot[presStyleOne] coordinates{ (137.982208,1.75) (138.006656,1.75) }; 
 
